// Copyright 2023 AI Redefined Inc. <dev+cogment@ai-r.com>
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//    http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package rps;

message EnvironmentConfig {
  int32 target_score = 1;
}

message TrialConfig {
}

enum Move {
  UNKNOWN = 0;
  ROCK = 1;
  PAPER = 2;
  SCISSORS = 3;
}

message PlayerState {
  bool won_last = 2;
  optional Move last_move = 3;
}

message Observation {
  PlayerState me = 1;
  PlayerState them = 2;
}

message PlayerAction {
  Move move = 1;
}
